<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string-array name="speed_dials">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="speed_dial_contact_name">
        <item>Home</item>
        <item>Karen</item>
        <item>George</item>
        <item>Emma</item>
        <item>Mum and Dad</item>
        <item>available</item>
        <item>available</item>
        <item>available</item>
        <item>available</item>
        <item>available</item>
    </string-array>

    <string-array name="speed_dial_phone_number">
        <item>01952840465</item>
        <item>07859769076</item>
        <item>07534344366</item>
        <item>07498286323</item>
        <item>01606853203</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="speed_texts">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="speed_text_contact_name">
        <item>Karen</item>
        <item>George</item>
        <item>Emma</item>
        <item>Mum and Dad</item>
        <item>Daz</item>
        <item>Kev</item>
        <item>Gribbo</item>
        <item>Available</item>
        <item>Available</item>
        <item>Available</item>
    </string-array>

    <string-array name="speed_text_phone_number">
        <item>07850769076</item>
        <item>07534344366</item>
        <item>07498286323</item>
        <item>07812810007</item>
        <item>07493869238</item>
        <item>07880005945</item>
        <item>07471227310</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string name="app_name">Simple Speed dialler</string>
    <string name="txtWakeup">Tap the screen 3 times to wake up the assistant </string>
    <string name="action_settings">Settings</string>
    <string name="btnSpeak">Speak to me</string>
    <string name="btnMakeCall">Make call</string>
    <string name="lblSettings">Settings</string>
    <string name="Settings">Settings</string>
    <string name="action_exit">Exit</string>
    <string name="action_back">Back</string>
    <string name="phone_numbers">Phone numbers</string>
    <string name="title_activity_settings">Settings Activity</string>
    <string name="PhoneList">Phone Number list</string>
    <string name="lblContactName">Contact Name</string>
    <string name="lblContactNumber">Contact Number</string>
    <string name="lblSpeedDialNumber">Assign Speed Dial Number</string>
    <string name="type_contacts_name_here">Type contacts name here.</string>
    <string name="type_phone_number_here">Type phone number here.</string>
    <string name="Dialog_message">Do you want to save changes to current data?</string>
    <string name="Dialog_title">Save Alert</string>
    <string name="btnSpeedDialMode">Switch to speed dial</string>
    <string name="btnSwitchToText">Switch to speed text</string>
    <string name="Version"> Version</string>

</resources>
