<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:alpha="1"
    android:animateLayoutChanges="true"
    android:background="@drawable/ssda"
    android:backgroundTintMode="screen"
    android:visibility="visible">

    <TextView
        android:id="@+id/lblContactName"
        android:layout_width="262dp"
        android:layout_height="37dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/lblContactName"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_editor_absoluteY="374dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/lblContactNumber"
        android:layout_width="270dp"
        android:layout_height="37dp"
        android:layout_marginTop="271dp"
        android:text="@string/lblContactNumber"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/ContactNumber"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />


    <EditText
        android:id="@+id/ContactNumber"
        android:layout_width="186dp"
        android:layout_height="47dp"
        android:layout_marginStart="28dp"
        android:width="3dp"
        android:alpha="1"
        android:background="@android:color/holo_blue_light"
        android:contentDescription="@string/type_phone_number_here"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fadingEdge="none"
        android:inputType="phone"
        android:padding="10dp"

        android:text="@string/type_phone_number_here"
        android:textColor="@android:color/white"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/lblContactNumber"
        tools:layout_editor_absoluteX="284dp" />

    <EditText
        android:id="@+id/ContactName"
        android:layout_width="186dp"
        android:layout_height="40dp"
        android:layout_marginRight="8dp"
        android:width="3dp"
        android:alpha="1"
        android:background="@android:color/holo_blue_light"
        android:contentDescription="@string/type_contacts_name_here"
        android:drawablePadding="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:text="@string/type_contacts_name_here"
        android:textColor="@android:color/white"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/lblContactName"
        android:layout_marginLeft="8dp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintBaseline_toBaselineOf="@+id/lblContactName" />

    <TextView
        android:id="@+id/lblSpeedDialNumber"
        android:layout_width="335dp"
        android:layout_height="49dp"
        android:layout_marginLeft="0dp"
        android:layout_marginStart="8dp"


        android:alpha="1"
        android:text="@string/lblSpeedDialNumber"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_editor_absoluteY="153dp"
        tools:ignore="MissingConstraints" />

    <Spinner
        android:id="@+id/SpnChooseSpeedDialNumber"
        android:layout_width="132dp"
        android:layout_height="46dp"
        android:layout_marginEnd="8dp"
        android:alpha="1"
        android:alwaysDrawnWithCache="true"
        android:background="@android:color/holo_blue_light"
        android:clickable="true"
        android:dropDownSelector="#6010ff"
        android:dropDownWidth="50dp"
        android:entries="@array/speed_dials"
        android:focusableInTouchMode="true"
        android:foreground="#fffa6e"
        android:foregroundGravity="top"
        android:spinnerMode="dropdown"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        tools:ignore="MissingConstraints,RtlCompat"
        tools:layout_editor_absoluteX="338dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/lblSpeedDialNumber" />

</android.support.constraint.ConstraintLayout>