<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="1"
    android:animateLayoutChanges="true"
    android:background="@drawable/ssda"
    android:backgroundTintMode="screen"
    android:contextClickable="true"
    android:visibility="visible"
    tools:layout_editor_absoluteX="5dp"
    tools:layout_editor_absoluteY="86dp">


    <TextView
        android:id="@+id/lblContactName"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="137dp"
        android:shadowColor="#0123"
        android:text="@string/lblContactName"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@+id/SpnChooseSpeedDialNumber"
        app:layout_constraintRight_toRightOf="@+id/SpnChooseSpeedDialNumber"
        app:layout_constraintTop_toBottomOf="@+id/SpnChooseSpeedDialNumber" />

    <TextView
        android:id="@+id/txtInstruction"
        android:layout_width="395dp"
        android:layout_height="wrap_content"

        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="110dp"
        android:text="@string/lblContactNumber"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/SpnChooseSpeedDialNumber"
        app:layout_constraintRight_toRightOf="@+id/SpnChooseSpeedDialNumber"
        app:layout_constraintTop_toBottomOf="@+id/ContactName" />

    <EditText
        android:id="@+id/ContactName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:alpha="1"
        android:background="@android:color/holo_blue_light"
        android:contentDescription="@string/type_contacts_name_here"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblContactName"
        android:padding="10dp"
        android:text="@string/type_contacts_name_here"/>

    <EditText
        android:id="@+id/ContactNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="107dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:alpha="1"
        android:background="@android:color/holo_blue_light"
        android:contentDescription="@string/type_phone_number_here"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fadingEdge="none"
        android:inputType="phone"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@+id/txtInstruction"
        app:layout_constraintTop_toBottomOf="@+id/txtInstruction"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/lblSpeedDialNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="52dp"
        android:alpha="1"
        android:text="@string/lblSpeedDialNumber"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/SpnChooseSpeedDialNumber"
        android:layout_width="0dp"
        android:layout_height="50dp"

        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:alpha="1"
        android:alwaysDrawnWithCache="true"
        android:background="@android:drawable/btn_dropdown"
        android:clickable="true"
        android:contextClickable="true"
        android:dropDownSelector="@android:drawable/btn_dropdown"
        android:elevation="1dp"
        android:entries="@array/speed_dials"
        android:focusableInTouchMode="true"
        android:foregroundGravity="top"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="36sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblSpeedDialNumber"
        tools:dropDownWidth="wrap_content"
        tools:ignore="RtlCompat" />

</android.support.constraint.ConstraintLayout>